update function buy subscription